更新 cmake，独立配置 cuda 和 optix，整理 ptx 的编译逻辑

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,12 +1,13 @@
-embed_ptx(
-    SOURCES
+
+set(OUTPUT_TARGET_NAME "embed_ptx_to_lib")
+
+cuda_compile_and_embed(
+    CUDA_SOURCES
         devicePrograms.cu
     EMBEDDED_SYMBOL_NAMES
         embedded_ptx_code
-    PTX_TARGET
-        devicePrograms_ptx
     OUTPUT_TARGET
-        devicePrograms_obj
+        ${OUTPUT_TARGET_NAME}
 )
 
 add_executable(learn-optix
@@ -17,10 +18,10 @@ add_executable(learn-optix
     SampleRenderer.cpp
     main.cpp
     )
+
 target_link_libraries(learn-optix
     gdt
-    devicePrograms_obj
+    ${OUTPUT_TARGET_NAME}
     CUDA::cudart_static
     CUDA::cuda_driver
     )
-
