add GLFW and OpenGL to show image at window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ endif()
 
 include(${CMAKE_SOURCE_DIR}/cmake/configure_cuda.cmake)
 include(${CMAKE_SOURCE_DIR}/cmake/configure_optix.cmake)
+include(${CMAKE_SOURCE_DIR}/cmake/configure_opengl.cmake)
 include(${CMAKE_SOURCE_DIR}/cmake/cuda_compile_and_embed.cmake)
 
 include_directories(3rdparty)
